______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.138:

* Fixed 'xins -version' on systems without .sourceforge.properties file.

* XINS/Java Common Library:
  - Added class function isHexDigit(char) to class HexConverter.
  - Implemented URLEncoding.decode(String) without using java.net.URLDecoder.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.137:

* XINS/Java Common Library:
  - Fixed bug in class function toHexString(int) in class HexConverter.

* XINS/Java Client Framework:
  - Improved ActualFunctionCaller class:
    . If a parameter key is null or empty string, it is ignored.
    . Parameter keys cannot start with an underscore.
    . Parameter keys are now properly URL-encoded.
    . If a parameter value, converted to a string is null or empty string,
      then it is ignored.
    . Storing CRC32 in an int.
    . Added method ping()
    . Added method getRemoteXINSVersion()
    . Never calling _NoOp in constructor. The application can use ping() if
      appropriate.

* Generated CAPI classes:
  - Generating package.html.

* Generated type classes:
  - Generating package.html.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.136:

* XINS/Java Client Framework:
  - Copied all getter methods from CallResult to UnsuccessfulCallException,
    except isSuccess(). Deprecated getCallResult() in the latter class.
  - Added class CallIOException that extends CallException and wraps around an
    IOException.
  - Added class UnacceptableCallResultException that extends CallException and
    accepts an optional reason only.

* Generated CAPI classes:
  - Call methods now only throw CallException.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.135:

* XINS/Java Client Framework: